Bug 131398 - FILEOPEN XLSX Chart data label formatted as number with percentage format
Summary: FILEOPEN XLSX Chart data label formatted as number with percentage format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-03-18 09:27 UTC by NISZ LibreOffice Team
Modified: 2020-09-10 15:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (17.65 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-03-18 09:27 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (120.25 KB, image/png)
2020-03-18 09:28 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-03-18 09:27:40 UTC
Created attachment 158778 [details]
Example file from Excel

Attached XLSX file contains a pie chart with numeric data labels formatted as percentage with two decimal digits. For comparison it contains a similar chart with data labels formatted as percentage.
When opened in Calc the data labels are formatted as percentage.

Steps to reproduce:
    1. Open attached file

Actual results:
First chart has data labels formatted as percentage instead of numbers.

Expected results:
First chart should have data labels are set as numbers, formatted as percentage.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: ec85ed21a960a198a01778cdb89a91fabcb5d0c0
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Also happens in:

Verzió: 6.0.0.3
Build az.: 64a0f66915f38c6217de274f0aa8e15618924765
CPU szálak: 4; OS: Windows 6.3; Felületmegjelenítés: alapértelmezett; 
Területi beállítások: hu-HU (hu_HU); Calc: CL

Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: hu-HU (hu_HU)
Comment 1 NISZ LibreOffice Team 2020-03-18 09:28:06 UTC
Created attachment 158779 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 Xisco Faulí 2020-03-18 17:39:00 UTC
Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 086bfde59232076644995ae862cd43865419ad98
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Commit Notification 2020-03-20 10:46:06 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9f3623ce21a89e026128f85b4a09a40757754090

tdf#131398 OOXML chart import: fix number format of pie chart labels

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.