tdf#131398 OOXML chart import: fix number format of pie chart labels

Remove percentage format detection heuristics, which converted the
plain number format with percentage style to percentage format based
on the formatted string, resulting bad pie chart labels.

Change-Id: I642394d04fd6e6a5439bd53207e08e75de5b3029
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90570
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>